Migrate tests (#863)