@@ -25,11 +25,11 @@ import static java.util.Arrays.asList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonMap;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.neo4j.configuration.SettingImpl.newBuilder;
 import static org.neo4j.configuration.SettingValueParsers.BOOL;
 import static org.neo4j.driver.Values.isoDuration;
@@ -43,6 +43,7 @@ import apoc.util.TestUtil;
 import apoc.util.Util;
 import apoc.util.collection.Iterables;
 import com.google.common.collect.ImmutableMap;
+import com.neo4j.test.extension.EnterpriseDbmsExtension;
 import java.io.InputStreamReader;
 import java.time.Clock;
 import java.time.LocalDate;
@@ -53,17 +54,16 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import org.apache.commons.io.IOUtils;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.neo4j.configuration.GraphDatabaseInternalSettings;
 import org.neo4j.configuration.GraphDatabaseSettings;
 import org.neo4j.graphdb.*;
-import org.neo4j.test.rule.DbmsRule;
-import org.neo4j.test.rule.ImpermanentDbmsRule;
+import org.neo4j.test.TestDatabaseManagementServiceBuilder;
+import org.neo4j.test.extension.ExtensionCallback;
+import org.neo4j.test.extension.Inject;
 import org.neo4j.values.storable.CoordinateReferenceSystem;
 import org.neo4j.values.storable.DateTimeValue;
 import org.neo4j.values.storable.DateValue;
@@ -72,41 +72,43 @@ import org.neo4j.values.storable.LocalTimeValue;
 import org.neo4j.values.storable.TimeValue;
 import org.neo4j.values.storable.Values;
 
+@EnterpriseDbmsExtension(configurationCallback = "configure")
 public class MetaTest {
 
-    @Rule
-    public DbmsRule db = new ImpermanentDbmsRule()
-            .withSetting(
-                    GraphDatabaseSettings.procedure_unrestricted,
-                    List.of(
-                            "apoc.meta.nodes.count",
-                            "apoc.meta.stats",
-                            "apoc.meta.data",
-                            "apoc.meta.schema",
-                            "apoc.meta.nodeTypeProperties",
-                            "apoc.meta.relTypeProperties",
-                            "apoc.meta.graph",
-                            "apoc.meta.graph.of",
-                            "apoc.meta.graphSample",
-                            "apoc.meta.subGraph"))
-            .withSetting(GraphDatabaseInternalSettings.latest_kernel_version, Byte.MAX_VALUE)
-            .withSetting(GraphDatabaseInternalSettings.latest_runtime_version, Integer.MAX_VALUE)
-            .withSetting(
-                    newBuilder("internal.dbms.debug.track_cursor_close", BOOL, false)
-                            .build(),
-                    false)
-            .withSetting(
-                    newBuilder("internal.dbms.debug.trace_cursors", BOOL, false).build(), false);
+    @Inject
+    GraphDatabaseService db;
 
-    @Before
-    public void setUp() {
-        TestUtil.registerProcedure(
-                db, Meta.class, MetaRestricted.class, Graphs.class, Nodes.class, HelperProcedures.class);
+    @ExtensionCallback
+    void configure(TestDatabaseManagementServiceBuilder builder) {
+        builder.setConfig(
+                        GraphDatabaseSettings.procedure_unrestricted,
+                        List.of(
+                                "apoc.meta.nodes.count",
+                                "apoc.meta.stats",
+                                "apoc.meta.data",
+                                "apoc.meta.schema",
+                                "apoc.meta.nodeTypeProperties",
+                                "apoc.meta.relTypeProperties",
+                                "apoc.meta.graph",
+                                "apoc.meta.graph.of",
+                                "apoc.meta.graphSample",
+                                "apoc.meta.subGraph"))
+                .setConfig(GraphDatabaseInternalSettings.latest_kernel_version, Byte.MAX_VALUE)
+                .setConfig(GraphDatabaseInternalSettings.latest_runtime_version, Integer.MAX_VALUE)
+                .setConfig(
+                        newBuilder("internal.dbms.debug.track_cursor_close", BOOL, false)
+                                .build(),
+                        false)
+                .setConfig(
+                        newBuilder("internal.dbms.debug.trace_cursors", BOOL, false)
+                                .build(),
+                        false);
     }
 
-    @After
-    public void teardown() {
-        db.shutdown();
+    @BeforeAll
+    void setUp() {
+        TestUtil.registerProcedure(
+                db, Meta.class, MetaRestricted.class, Graphs.class, Nodes.class, HelperProcedures.class);
     }
 
     public static boolean hasRecordMatching(List<Map<String, Object>> records, Map<String, Object> record) {
@@ -192,7 +194,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaGraphExtraRels() {
+    void testMetaGraphExtraRels() {
         db.executeTransactionally(
                 """
                 CREATE (a:S1 {SomeName1:'aaa'})
@@ -210,7 +212,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaGraphMaxRels() {
+    void testMetaGraphMaxRels() {
         db.executeTransactionally("CREATE (:S2 {id:'another'}), (:S2 {id:'another2'}), (:S2 {id:'another3'}), \n" +
                 // create nodes to be linked
                 "(a:S1 {id:'aaa'}), (b:S2 {id:'bbb'}), (c:S3 {id:'ccc'}), (d:S4 {id:'ddd'}), "
@@ -234,7 +236,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelationshipExistsSampling() {
+    void testRelationshipExistsSampling() {
         List<Long> skipSizes = List.of(2L, 100L, 1000L, -1L, 0L, 1L);
         List<Long> fromNodeCounts = List.of(4L, 1000L, 100L, 500L, 10000L, 4L);
         List<Integer> expectedChecks = List.of(2, 10, 1, 500, 10000, 4);
@@ -276,7 +278,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaType() {
+    void testMetaType() {
         try (Transaction tx = db.beginTx()) {
             Node node = tx.createNode();
             Relationship rel = node.createRelationshipTo(node, RelationshipType.withName("FOO"));
@@ -303,7 +305,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaTypeArray() {
+    void testMetaTypeArray() {
         testTypeName(asList(1, 2), "LIST OF INTEGER");
         testTypeName(asList(LocalDate.of(2018, 1, 1), 2), "LIST OF ANY");
         testTypeName(new Integer[] {1, 2}, "LIST OF INTEGER");
@@ -316,7 +318,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaIsType() {
+    void testMetaIsType() {
         try (Transaction tx = db.beginTx()) {
             Node node = tx.createNode();
             Relationship rel = node.createRelationshipTo(node, RelationshipType.withName("FOO"));
@@ -343,7 +345,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaTypes() {
+    void testMetaTypes() {
 
         Map<String, Object> param = map(
                 "MAP",
@@ -362,7 +364,7 @@ public class MetaTest {
                 null);
         TestUtil.testCall(db, "RETURN apoc.meta.cypher.types($param) AS value", singletonMap("param", param), row -> {
             Map<String, String> res = (Map) row.get("value");
-            res.forEach(Assert::assertEquals);
+            res.forEach(Assertions::assertEquals);
         });
     }
 
@@ -375,7 +377,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testVectorTypes() {
+    void testVectorTypes() {
         var vectorTypes = List.of("INT64", "INT32", "INT16", "INT8", "FLOAT64", "FLOAT32");
         for (String type : vectorTypes) {
             TestUtil.testCall(
@@ -403,7 +405,7 @@ public class MetaTest {
                 db,
                 "RETURN apoc.meta.cypher.isType($value,$type) AS value",
                 map("value", value, "type", type),
-                result -> assertEquals("type was not " + type, true, result.get("value")));
+                result -> assertEquals(true, result.get("value")));
         TestUtil.testCall(
                 db,
                 "RETURN apoc.meta.cypher.isType($value,$type) AS value",
@@ -444,7 +446,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaStats() {
+    void testMetaStats() {
         final var setup =
                 "CREATE (:Actor)-[:ACTED_IN]->(:Movie), ()-[:ACTED_IN]->(:Movie), (:Actor)-[:ACTED_IN]->(), ()-[:ACTED_IN]->()";
         final var expected = statsMap(Map.of(
@@ -467,7 +469,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaStats2() {
+    void testMetaStats2() {
         final var nodeLabels = List.of("", ":A", ":B", ":A:B");
         final var setup = new StringBuilder();
         for (final var labelsA : nodeLabels) {
@@ -501,11 +503,11 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaGraph() {
+    void testMetaGraph() {
         db.executeTransactionally("CREATE (a:Actor)-[:ACTED_IN]->(m1:Movie),(a)-[:ACTED_IN]->(m2:Movie)");
         TestUtil.testCall(db, "CALL apoc.meta.graph()", (row) -> {
             List<Node> nodes = (List<Node>) row.get("nodes");
-            Node n1 = nodes.get(0);
+            Node n1 = nodes.getFirst();
             assertTrue(n1.hasLabel(Label.label("Actor")));
             assertEquals(1L, n1.getProperty("count"));
             assertEquals("Actor", n1.getProperty("name"));
@@ -514,14 +516,14 @@ public class MetaTest {
             assertEquals("Movie", n2.getProperty("name"));
             assertEquals(2L, n2.getProperty("count"));
             List<Relationship> rels = (List<Relationship>) row.get("relationships");
-            Relationship rel = rels.iterator().next();
+            Relationship rel = rels.getFirst();
             assertEquals("ACTED_IN", rel.getType().name());
             assertEquals(2L, rel.getProperty("count"));
         });
     }
 
     @Test
-    public void testMetaGraph2() {
+    void testMetaGraph2() {
         db.executeTransactionally("CREATE (:Actor)-[:ACTED_IN]->(:Movie) ");
         TestUtil.testCall(db, "CALL apoc.meta.graphSample()", (row) -> {
             List<Node> nodes = (List<Node>) row.get("nodes");
@@ -541,7 +543,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testVectorIndexes() {
+    void testVectorIndexes() {
         db.executeTransactionally(
                 """
                 CREATE VECTOR INDEX moviePlots IF NOT EXISTS
@@ -577,7 +579,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaData() {
+    void testMetaData() {
         db.executeTransactionally("create index for (n:Movie) on (n.title)");
         db.executeTransactionally("create constraint for (a:Actor) require a.name is unique");
         db.executeTransactionally(
@@ -670,7 +672,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testOutgoingRelsAreCorrectMetaSchema() {
+    void testOutgoingRelsAreCorrectMetaSchema() {
         db.executeTransactionally("CREATE (:A)-[:HAS]->(:B), (:A)<-[:HAS]-(:B), (:A)<-[:HAS]-(:C), (:D)<-[:HAS]-(:E)");
 
         testCall(db, "CALL apoc.meta.schema", (row) -> {
@@ -722,7 +724,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaSchema() {
+    void testMetaSchema() {
         db.executeTransactionally("create index for (n:Movie) on (n.title)");
         db.executeTransactionally("create constraint for (p:Person) require p.name is unique");
         db.executeTransactionally(
@@ -788,7 +790,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaSchemaWithNodesAndRelsWithoutProps() {
+    void testMetaSchemaWithNodesAndRelsWithoutProps() {
         db.executeTransactionally(
                 "CREATE (:Other), (:Other)-[:REL_1]->(:Movie)<-[:REL_2 {baz: 'baa'}]-(:Director), (:Director {alpha: 'beta'}), (:Actor {foo:'bar'}), (:Person)");
         testCall(db, "CALL apoc.meta.schema()", (row) -> {
@@ -835,7 +837,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaSchemaWithSmallSampleAndRelationships() {
+    void testMetaSchemaWithSmallSampleAndRelationships() {
         final List<String> labels = List.of("Other", "Foo");
         db.executeTransactionally(
                 "CREATE (:Foo), (:Other)-[:REL_0]->(:Other), (:Other)-[:REL_1]->(:Other)<-[:REL_2 {baz: 'baa'}]-(:Other), (:Other {alpha: 'beta'}), (:Other {foo:'bar'})-[:REL_3]->(:Other)");
@@ -851,7 +853,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testIssue1861LabelAndTypeWithSameName() {
+    void testIssue1861LabelAndTypeWithSameName() {
         db.executeTransactionally(
                 """
                 CREATE (s0 :person{id:1} ) SET s0.name = 'rose'
@@ -876,7 +878,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testSubGraphNoLimits() {
+    void testSubGraphNoLimits() {
         db.executeTransactionally("CREATE (:A)-[:X]->(b:B),(b)-[:Y]->(:C)");
         testCall(db, "CALL apoc.meta.subGraph({})", (row) -> {
             List<Node> nodes = (List<Node>) row.get("nodes");
@@ -891,7 +893,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testSubGraphNonExistingLabels() {
+    void testSubGraphNonExistingLabels() {
         db.executeTransactionally(
                 """
                 MATCH (n) DETACH DELETE n
@@ -920,7 +922,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testSubGraphNonExistingTypes() {
+    void testSubGraphNonExistingTypes() {
         db.executeTransactionally(
                 """
                 MATCH (n) DETACH DELETE n
@@ -949,7 +951,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testSubGraphLimitLabels() {
+    void testSubGraphLimitLabels() {
         final String labels = "labels";
         testSubgraphLabelsCommon(labels);
     }
@@ -969,19 +971,19 @@ public class MetaTest {
     }
 
     @Test
-    public void testSubGraphWithIncludeLabels() {
+    void testSubGraphWithIncludeLabels() {
         final String labels = "includeLabels";
         testSubgraphLabelsCommon(labels);
     }
 
     @Test
-    public void testSubGraphLimitWithRels() {
+    void testSubGraphLimitWithRels() {
         final String relsConf = "rels";
         assertMetaSubgraphCommon(relsConf);
     }
 
     @Test
-    public void testSubGraphLimitWithIncludeRels() {
+    void testSubGraphLimitWithIncludeRels() {
         final String relsConf = "includeRels";
         assertMetaSubgraphCommon(relsConf);
     }
@@ -1002,13 +1004,13 @@ public class MetaTest {
     }
 
     @Test
-    public void testSubGraphExcludes() {
+    void testSubGraphExcludes() {
         final String relsConf = "excludes";
         testExcludeLabelsCommon(relsConf);
     }
 
     @Test
-    public void testSubGraphExcludesLabels() {
+    void testSubGraphExcludesLabels() {
         final String relsConf = "excludeLabels";
         testExcludeLabelsCommon(relsConf);
     }
@@ -1033,7 +1035,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaSubgraphBothIncludeAndExclude() {
+    void testMetaSubgraphBothIncludeAndExclude() {
         final Consumer<Map<String, Object>> consumer = (row) -> {
             assertEquals(Collections.emptyList(), row.get("nodes"));
             assertEquals(Collections.emptyList(), row.get("relationships"));
@@ -1043,7 +1045,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDate() {
+    void testMetaDate() {
 
         Map<String, Object> param = map(
                 "DATE", DateValue.now(Clock.systemDefaultZone()),
@@ -1066,7 +1068,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaArray() {
+    void testMetaArray() {
 
         Map<String, Object> param = map(
                 "ARRAY", new String[] {"a", "b", "c"},
@@ -1109,7 +1111,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaNumber() {
+    void testMetaNumber() {
 
         Map<String, Object> param = map("INTEGER", 1L, "FLOAT", 1.0f, "DOUBLE", 1.0D, "NULL", null);
 
@@ -1124,7 +1126,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMeta() {
+    void testMeta() {
 
         Map<String, Object> param = map(
                 "LIST", asList(1.2, 2.1),
@@ -1158,7 +1160,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaList() {
+    void testMetaList() {
 
         Map<String, Object> param = map(
                 "LIST FLOAT", asList(1.2F, 2.1F),
@@ -1197,7 +1199,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaPoint() {
+    void testMetaPoint() {
         db.executeTransactionally("CREATE (:TEST {born:point({ longitude: 56.7, latitude: 12.78, height: 100 })})");
 
         TestUtil.testCall(
@@ -1207,7 +1209,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDuration() {
+    void testMetaDuration() {
         db.executeTransactionally("CREATE (:TEST {duration:duration('P5M1DT12H')})");
 
         TestUtil.testCall(
@@ -1217,7 +1219,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDataWithSample() {
+    void testMetaDataWithSample() {
         db.executeTransactionally("create index for (n:Person) on (n.name)");
         db.executeTransactionally("CREATE (:Person {name:'Tom'})");
         db.executeTransactionally("CREATE (:Person {name:'John', surname:'Brown'})");
@@ -1235,7 +1237,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDataWithSampleNormalized() {
+    void testMetaDataWithSampleNormalized() {
         db.executeTransactionally("create index for (n:Person) on (n.name)");
         db.executeTransactionally("CREATE (:Person {name:'Tom'})");
         db.executeTransactionally("CREATE (:Person {name:'John'})");
@@ -1269,7 +1271,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelationshipAndNodeNames() {
+    void testRelationshipAndNodeNames() {
         db.executeTransactionally("CREATE (a:NODE)-[r:RELATIONSHIP]->(m:Movie)");
         TestUtil.testResult(db, "CALL apoc.meta.data()", (r) -> {
             assertThat(r.stream().map(m -> m.get("label"))).contains("RELATIONSHIP", "NODE");
@@ -1278,7 +1280,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDataWithSample5() {
+    void testMetaDataWithSample5() {
         db.executeTransactionally("create index for (n:Person) on (n.name)");
         db.executeTransactionally("CREATE (:Person {name:'John', surname:'Brown'})");
         db.executeTransactionally("CREATE (:Person {name:'Daisy', surname:'Bob'})");
@@ -1297,7 +1299,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testSchemaWithSample() {
+    void testSchemaWithSample() {
         db.executeTransactionally("create constraint for (p:Person) require p.name is unique");
         db.executeTransactionally("CREATE (:Person {name:'Tom'})");
         db.executeTransactionally("CREATE (:Person {name:'John', surname:'Brown'})");
@@ -1328,7 +1330,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testSchemaWithSample5() {
+    void testSchemaWithSample5() {
         db.executeTransactionally("create constraint for (p:Person) require p.name is unique");
         db.executeTransactionally("CREATE (:Person {name:'Tom'})");
         db.executeTransactionally("CREATE (:Person {name:'John', surname:'Brown'})");
@@ -1356,7 +1358,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaGraphExtraRelsWithSample() {
+    void testMetaGraphExtraRelsWithSample() {
         db.executeTransactionally("CREATE (:S1 {name:'Tom'})");
         db.executeTransactionally("CREATE (:S2 {name:'John', surname:'Brown'})-[:KNOWS{since:2012}]->(:S7)");
         db.executeTransactionally("CREATE (:S1 {name:'Nick'})");
@@ -1377,7 +1379,7 @@ public class MetaTest {
     // Tests for T4L
 
     @Test
-    public void testRelTypePropertiesBasic() {
+    void testRelTypePropertiesBasic() {
         db.executeTransactionally("CREATE (:Base)-[:RELTYPE { a: 1, d: null }]->(:Target)");
         db.executeTransactionally("CREATE (:Base)-[:RELTYPE { a: 2, b: 2, c: 2, d: 4 }]->(:Target);");
 
@@ -1411,7 +1413,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesIncludes() {
+    void testRelTypePropertiesIncludes() {
         db.executeTransactionally("CREATE (:A)-[:CATCHME { c: 1 }]->(:B)");
         db.executeTransactionally("CREATE (:A)-[:IGNOREME { d: 1 }]->(:B)");
 
@@ -1423,7 +1425,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesIncludesWithDoubleRel() {
+    void testRelTypePropertiesIncludesWithDoubleRel() {
         db.executeTransactionally("CREATE (a:A)-[:FIRST_A {a: 1}]->(b:B), (a)-[:SECOND_B {b: '2'}]->(c)");
         db.executeTransactionally(
                 "CREATE (:Alpha)-[:FIRST_A {c: true}]->(:Beta), (:Gamma)-[:SECOND_B {d: datetime()}]->(:Delta)");
@@ -1465,7 +1467,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesNodeExcludes() {
+    void testNodeTypePropertiesNodeExcludes() {
         db.executeTransactionally("CREATE (:ExcludeMe)");
         db.executeTransactionally("CREATE (:IncludeMe)");
 
@@ -1477,7 +1479,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesNodeIncludes() {
+    void testNodeTypePropertiesNodeIncludes() {
         db.executeTransactionally("CREATE (:ExcludeMe)");
         db.executeTransactionally("CREATE (:IncludeMe)");
 
@@ -1489,7 +1491,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesRelExcludes() {
+    void testNodeTypePropertiesRelExcludes() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1508,7 +1510,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesRelIncludes() {
+    void testNodeTypePropertiesRelIncludes() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1527,7 +1529,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesWithWeirdConfig() {
+    void testNodeTypePropertiesWithWeirdConfig() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1548,7 +1550,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesWithWeirdConfig() {
+    void testRelTypePropertiesWithWeirdConfig() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1564,7 +1566,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesRelExcludes() {
+    void testRelTypePropertiesRelExcludes() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1576,7 +1578,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesRelIncludes() {
+    void testRelTypePropertiesRelIncludes() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1588,7 +1590,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesNodeExcludes() {
+    void testRelTypePropertiesNodeExcludes() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1604,7 +1606,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesNodeIncludes() {
+    void testRelTypePropertiesNodeIncludes() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1620,7 +1622,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesNodeIncludesRelIncludes1() {
+    void testNodeTypePropertiesNodeIncludesRelIncludes1() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1632,7 +1634,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesNodeIncludesRelIncludes2() {
+    void testNodeTypePropertiesNodeIncludesRelIncludes2() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1649,19 +1651,19 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesNodeIncludesAndRelsInclude1() {
+    void testRelTypePropertiesNodeIncludesAndRelsInclude1() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
         // both together contract the data model and it should result in 0 results
         TestUtil.testResult(
-                db, "CALL apoc.meta.relTypeProperties({ includeLabels: ['A'], includeRels: ['RELB'] })", r -> {
-                    assertEquals(0, gatherRecords(r).size());
-                });
+                db,
+                "CALL apoc.meta.relTypeProperties({ includeLabels: ['A'], includeRels: ['RELB'] })",
+                r -> assertEquals(0, gatherRecords(r).size()));
     }
 
     @Test
-    public void testRelTypePropertiesNodeIncludesAndRelsInclude2() {
+    void testRelTypePropertiesNodeIncludesAndRelsInclude2() {
         db.executeTransactionally("CREATE (:A)-[:RELA { x: 1 }]->(:C)");
         db.executeTransactionally("CREATE (:B)-[:RELB { x: 1 }]->(:D)");
 
@@ -1678,7 +1680,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesCompleteResult() {
+    void testNodeTypePropertiesCompleteResult() {
         db.executeTransactionally("CREATE (:Foo { z: 'hej' });");
         db.executeTransactionally("CREATE (:Foo { z: 1 });");
 
@@ -1698,7 +1700,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testVectorTypesOnProperties() {
+    void testVectorTypesOnProperties() {
         var vectorTypes = List.of("INT64", "INT32", "INT16", "INT8", "FLOAT64", "FLOAT32");
         for (String type : vectorTypes) {
             db.executeTransactionally("CYPHER 25 CREATE (:Foo { z: VECTOR([1, 2, 3], 3, %s) });".formatted(type));
@@ -1756,7 +1758,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesCompleteResult() {
+    void testRelTypePropertiesCompleteResult() {
         db.executeTransactionally("CREATE (:A)-[:Foo { z: 'hej' }]->(:B);");
         db.executeTransactionally("CREATE (:A)-[:Foo { z: 1 }]->(:B);");
 
@@ -1777,7 +1779,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesWithSpecialSampleSize() {
+    void testNodeTypePropertiesWithSpecialSampleSize() {
         db.executeTransactionally("CREATE (:Foo { z: 'hej' });");
         db.executeTransactionally("CREATE (:Foo { z: 1 });");
         db.executeTransactionally("CREATE (:Foo { z: true });");
@@ -1809,7 +1811,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesEquivalenceAdvanced() {
+    void testNodeTypePropertiesEquivalenceAdvanced() {
         db.executeTransactionally("CREATE (:Foo { l: 1, s: 'foo', d: datetime(), ll: ['a', 'b'], dl: [2.0, 3.0] });");
         // Missing all properties to make everything non-mandatory.
         db.executeTransactionally("CREATE (:Foo { z: 1 });");
@@ -1818,7 +1820,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesEquivalenceAdvanced() {
+    void testRelTypePropertiesEquivalenceAdvanced() {
         db.executeTransactionally(
                 "CREATE (:Foo)-[:REL { l: 1, s: 'foo', d: datetime(), ll: ['a', 'b'], dl: [2.0, 3.0] }]->();");
         // Missing all properties to make everything non-mandatory.
@@ -1828,7 +1830,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testNodeTypePropertiesEquivalenceTypeMapping() {
+    void testNodeTypePropertiesEquivalenceTypeMapping() {
         String q = "CREATE (:Test {" + "    longProp: 1,"
                 + "    doubleProp: 3.14,"
                 + "    stringProp: 'Hello',"
@@ -1850,7 +1852,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesEquivalenceTypeMapping() {
+    void testRelTypePropertiesEquivalenceTypeMapping() {
         String q = "CREATE (t:Test)-[:REL{" + "    longProp: 1,"
                 + "    doubleProp: 3.14,"
                 + "    stringProp: 'Hello',"
@@ -1872,7 +1874,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDataOf() {
+    void testMetaDataOf() {
         db.executeTransactionally("create index for (n:Movie) on (n.title)");
         db.executeTransactionally("create constraint for (a:Actor) require a.name is unique");
         db.executeTransactionally(
@@ -2056,7 +2058,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDataOfWithRelConstraints() {
+    void testMetaDataOfWithRelConstraints() {
         db.executeTransactionally("CREATE CONSTRAINT FOR ()-[like:LIKES]-() REQUIRE like.score IS UNIQUE");
         db.executeTransactionally(
                 "CREATE (gem:Person {name: \"Gem\"})-[:LIKES {score: 10}]->(cake:Cake {type: \"Chocolate\"})");
@@ -2218,7 +2220,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaGraphOf() {
+    void testMetaGraphOf() {
         db.executeTransactionally(
                 "CREATE (p:Person {name:'Tom Hanks'}), (m:Movie {title:'Forrest Gump'}), (pr:Product{name: 'Awesome Product'}), "
                         + "(p)-[:VIEWED]->(m), (p)-[:BOUGHT{quantity: 10}]->(pr)");
@@ -2258,7 +2260,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaRelTypePropertiesWithManyRels() {
+    void testMetaRelTypePropertiesWithManyRels() {
         db.executeTransactionally("UNWIND range (0, 200) as idx CREATE (a:A)-[:FIRST_A]-> (b:B)");
         db.executeTransactionally("CREATE (a:A)-[:FIRST_A {a: 1}]->(b:B)");
 
@@ -2276,7 +2278,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaStatsWithTwoDots() {
+    void testMetaStatsWithTwoDots() {
         db.executeTransactionally(
                 "CREATE (n:`My:Label` {id:1})-[r:`http://www.w3.org/2000/01/rdf-schema#isDefinedBy` {alpha: 'beta'}]->(s:Another)");
         TestUtil.testCall(db, "CALL apoc.meta.stats()", row -> {
@@ -2297,7 +2299,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaDataWithRelIndexes() {
+    void testMetaDataWithRelIndexes() {
         datasetWithNodeRelIdxs();
 
         testResult(
@@ -2334,7 +2336,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaSchemaWithRelIndexes() {
+    void testMetaSchemaWithRelIndexes() {
         datasetWithNodeRelIdxs();
 
         TestUtil.testCall(db, "CALL apoc.meta.schema()", (row) -> {
@@ -2368,7 +2370,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaStatsWithLabelAndRelTypeCountInUse() {
+    void testMetaStatsWithLabelAndRelTypeCountInUse() {
         db.executeTransactionally("CREATE (:Node:Test)-[:REL {a: 'b'}]->(:Node {c: 'd'})<-[:REL]-(:Node:Test)");
         db.executeTransactionally("CREATE (:A {e: 'f'})-[:ANOTHER {g: 'h'}]->(:C)");
 
@@ -2414,7 +2416,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaNodesCount() {
+    void testMetaNodesCount() {
         db.executeTransactionally("CREATE (:MyCountLabel {id: 1}), (:MyCountLabel {id: 2}), (:ThirdLabel {id: 3})");
 
         // 2 outcome rels and 1 incoming
@@ -2476,7 +2478,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testRelTypePropertiesMovies() throws Exception {
+    void testRelTypePropertiesMovies() throws Exception {
         final String query = IOUtils.toString(new InputStreamReader(
                 Thread.currentThread().getContextClassLoader().getResourceAsStream("movies.cypher")));
 
@@ -2523,12 +2525,12 @@ public class MetaTest {
                                     8L,
                                     "propertyName",
                                     "summary"));
-                    Assert.assertEquals(expected, actual);
+                    assertEquals(expected, actual);
                 });
     }
 
     @Test
-    public void testMetaGraphSampling() {
+    void testMetaGraphSampling() {
         db.executeTransactionally("CREATE (:A)-[:R1]->(:B)-[:R1]->(:C)");
 
         // Not specifying sampling will check through all relationships and make sure they
@@ -2548,7 +2550,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testMetaGraphSparseSampling() {
+    void testMetaGraphSparseSampling() {
         // The 3 procedures using this sampling, set to look at the whole graph
         List<String> samplingBasedProcs = List.of(
                 "apoc.meta.graph(", "apoc.meta.graph.of(\"MATCH p = ()-[]->() RETURN p\", ", "apoc.meta.subGraph(");
@@ -2590,7 +2592,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testDifferentCypherVersionsApocMetaDataOf() {
+    void testDifferentCypherVersionsApocMetaDataOf() {
         db.executeTransactionally("CREATE (:CYPHER_5 {prop: 1}), (:CYPHER_25 {prop: 1})");
 
         for (HelperProcedures.CypherVersionCombinations cypherVersion : HelperProcedures.cypherVersions) {
@@ -2602,7 +2604,7 @@ public class MetaTest {
     }
 
     @Test
-    public void testDifferentCypherVersionsApocMetaGraphOf() {
+    void testDifferentCypherVersionsApocMetaGraphOf() {
         db.executeTransactionally("CREATE (:CYPHER_5), (:CYPHER_25)");
 
         for (HelperProcedures.CypherVersionCombinations cypherVersion : HelperProcedures.cypherVersions) {
